firefox-3.0 (3.0~b5+nobinonly-0ubuntu2) hardy; urgency=low

  *

 -- Alexander Sack <asac@ubuntu.com>  Fri, 11 Apr 2008 03:34:18 +0200

firefox-3.0 (3.0~b5+nobinonly-0ubuntu1) hardy; urgency=low

  * Firefox 3.0 Beta 5 package - "ready for prime-time"!

  * Multiple fixes and improvements to debian/rules: "rewrite substitution
    rules", "bad .autoreg install path makes package ftbfs", "Firefox must not
    ship reporter extension; its shipped in xulrunner-1.9", "enable
    mozilla-devscript's in binary-post-install", "--disable-debug passed twice
    in configure"
    - update debian/rules

       * Alexander Sack <asac@ubuntu.com>
       * Fabien Tassin <fta@sofaraway.org>

  * Multiple fixes to the apport hook: "remove .pyc file garbage during prerm",
    "bad install path", "bad extension directories used to gather data"
    - update debian/apport/firefox-3.0.py
    - update debian/firefox-3.0.prerm
    - update debian/firefox-3.0.install

       * Alexander Sack <asac@ubuntu.com>
       * Fabien Tassin <fta@sofaraway.org>

  * Multiple fixes required by libxul linkage with jemalloc: "libjemalloc.so
    cannot be installed - doesn't exist", "-Wl,-Bsymbolic-functions in LDFLAGS
    cause crashes at startup"
    - update debian/firefox-3.0.install
    - update debian/rules

       * Fabien Tassin <fta@sofaraway.org>

  * Fix multiple misc bugs: "migration creates double dots for abandoned
    profiles", "Wikipedia search plugin shipped upstream",  "blocklist.xml not
    installed", "use LIBDIR when touching .autoreg in postinst", "Fix restart
    notification misbehaviour", "Improve package description (LP: #207199)"
    - update debian/firefox.sh.in
    - drop debian/wikipedia.*
    - update debian/firefox-3.0.install
    - update debian/rules
    - update debian/firefox-3.0.postinst.in
    - update debian/firefox-3.0-restart-required.update-notifier

       * Alexander Sack <asac@ubuntu.com>
       * Fabien Tassin <fta@sofaraway.org>
